fix: wrong margin

--- a/frontend/src/common/Lottery/Lottery.module.scss
+++ b/frontend/src/common/Lottery/Lottery.module.scss
@@ -15,7 +15,7 @@ a {
 .lottery {
   height: 814px;
   max-width: 1280px;
-  margin: 15px auto;
+  margin: 15px auto 0 auto;
 }
 
 .lottery__header__wrapper {
